    DEFCLASS :METACLASS STRUCTURE-CLASS now inherit their initforms.
    (reported by Bruno Haible and Stephen Wilson)
  * bug fix: #395; fill-pointer output streams used now support
    element-type BASE-CHAR as well.
  * bug fix: compiler error when attempting to derive return value of
    ARRAY-ELEMENT-TYPE when the array type was a union of intersection
    types.

changes in sbcl-1.0.23 relative to 1.0.22:
  * enhancement: when disassembling method functions, disassembly
    for the associated fast function is also produced.
  * enhancement: system stores DEFTYPE lambda-lists, so DESCRIBE can
    report them.
  * optimization: printing with *PRINT-PRETTY* true is now more
    efficient as long as the object being printed doesn't require
    special handling by the pretty printer.
  * bug fix: slot symbol-macros from WITH-SLOTS inside DEFMETHOD bodies
    now interact correctly with type declarations.
  * partial bug fix: PCL detects infinite recursion during wrapper
    validation. (thanks to Attila Lendvai)
  * bug fix: #426; nested function calls are inlined properly.
    Previously if FOO was an inline function, in calls of the form
    (FOO (FOO ...)) the outer call was not inlined.
  * bug fix: long long arguments passed in registers to alien
    functions on PowerPC Linux and NetBSD are now handled correctly
    when preceded by SYSTEM-AREA-POINTERs. (reported by Josh Elsasser)

changes in sbcl-1.0.22 relative to 1.0.21:
  * minor incompatible change: LOAD-SHARED-OBJECT no longer by default looks
    for the shared object in the current directory, but passes the native
    namestring of the designated pathname to the operation system's shared
    object loading function as-it.
  * minor incompatible change: --disable-debugger toplevel option now takes
    effect before processing of initialization files and --eval or --load
    options.
  * new feature: new commandline argument: --script, which supports