@@ -207,6 +207,7 @@
 
 (with-test (:name (:throw :no-such-tag)
             :fails-on '(or
+                        (and :x86 :openbsd)
                         (and :x86 :sunos)
                         (and :x86 :darwin)
                         (and :x86-64 :darwin)
